@@ -6,7 +6,7 @@
        url         = "http://md-xed.sourceforge.net"
        description = "XML Editor"
        category    = "IDE extensions"
-       version     = "1.9.2">
+       version     = "2.1.0">
 	<Runtime>
 		<Import assembly="MonoDevelop.XmlEditor.dll" />
 		<Import file="schemas/appconfig.xsd" />
@@ -20,14 +20,14 @@
 	</Runtime>
 
 	<Dependencies>
-		<Addin id="Core" version="1.9.2"/>
-		<Addin id="Core.Gui" version="1.9.2"/>
-		<Addin id="Projects" version="1.9.2"/>
-		<Addin id="Projects.Gui" version="1.9.2"/>
-		<Addin id="Ide" version="1.9.2"/>
-		<Addin id="Components" version="1.9.2"/>
-		<Addin id="DesignerSupport" version="1.9.2"/>
-		<Addin id="SourceEditor2" version="1.9.2"/>
+		<Addin id="Core" version="2.1.0"/>
+		<Addin id="Core.Gui" version="2.1.0"/>
+		<Addin id="Projects" version="2.1.0"/>
+		<Addin id="Projects.Gui" version="2.1.0"/>
+		<Addin id="Ide" version="2.1.0"/>
+		<Addin id="Components" version="2.1.0"/>
+		<Addin id="DesignerSupport" version="2.1.0"/>
+		<Addin id="SourceEditor2" version="2.1.0"/>
 	</Dependencies>
 
 	<!-- Defines the Xml file extension node -->
