@@ -1,3 +1,8 @@
+2009-04-15  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* AssemblyInfo.cs:
+	* MonoDevelop.XmlEditor.addin.xml: Bump MD version.
+
 2009-03-17  Mike Krüger  <mkrueger@novell.com>
 
 	* MonoDevelop.XmlEditor/XmlDocumentParser.cs: Track API
